src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Seconday_DNS__c</fullName>
        <label>Seconday DNS</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Cable Swap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor Swap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Swap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Deinstall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Outlet Locks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Line Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Device Swap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Deinstall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Player Swap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet Swap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Only Dispatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV &amp; Tablet Swap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV Swap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wallboard Swap</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SidebarContentCreated__c</fullName>
        <label>Sidebar Content Created</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteContactAcknowledgement__c</fullName>
        <label>Site Contact Acknowledgement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solution_to_the_Problem__c</fullName>
        <label>Solution to the Problem (TV)</label>
        <picklist>
            <picklistValues>
                <fullName>MDM Script</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reboot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WO - Player swap resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WO - TS resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deinstalled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ports Unblocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV/Cords plugged back in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Troubleshooting needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specific_MAC_Required__c</fullName>
        <label>Specific MAC Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SprintSite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sprint Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sq_Ft__c</fullName>
        <formula>Account.SqFtofWR__c</formula>
        <label>Sq Ft of WR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Unscheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending IT coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending line drop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed, but IT issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deinstalled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled (only for LO)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Static__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Static</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StatusIcon__c</fullName>
        <formula>IF(
AND(RecordType.Name = &quot;Work Orders&quot;,
    NOT(ISPICKVAL(Status, &quot;Closed&quot;)),
    NOT(ISNULL(LatestServiceDateEnd__c)),
    NOT(Checked_In__c),
    NOW() &gt; LatestServiceDateEnd__c + 0.02073),
IMAGE(&quot;servlet/servlet.FileDownload?file=015C0000002Pedy&quot;, &quot;Red Flag&quot;, 30, 30),
IF(
AND(RecordType.Name = &quot;Work Orders&quot;,
    NOT(ISPICKVAL(Status, &quot;Closed&quot;)),
    NOT(ISNULL(LatestServiceDateEnd__c)),
    Checked_In__c,
    NOT(Checked_Out__c),
    NOW() &gt; LastModifiedDate + 0.04146),
IMAGE(&quot;servlet/servlet.FileDownload?file=015C0000001pvEJ&quot;, &quot;Blue Flag&quot;, 30, 30),
IF(
AND(RecordType.Name = &quot;Work Orders&quot;,
    NOT(ISPICKVAL(Status, &quot;Closed&quot;)),
    NOT(ISNULL(LatestServiceDateEnd__c)),
    Checked_In__c,
    NOT(Checked_Out__c),
    NOW() &lt; LastModifiedDate + 0.04146),
IMAGE(&quot;servlet/servlet.FileDownload?file=015C0000001pvEL&quot;, &quot;Green Flag&quot;, 30, 30),
&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subnet_Mask__c</fullName>
        <label>Subnet Mask</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TVModel__c</fullName>
        <label>TV Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TVOutletLockReasonNotInstalled__c</fullName>
        <label>TV Outlet Lock - Reason Not Installed</label>
        <picklist>
            <picklistValues>
                <fullName>Clinic refused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incompatible outlet such as GFCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not included in shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech compliance</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TV_Data_Drop_Installation_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LAN Drop Installation Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TV_Hardware_Installation_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TV Hardware Installation Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TV_Hardware_Installation__c</fullName>
        <description>TV Mounted, Player mounted, Power, etc are set.  Provide any necessary color here.</description>
        <label>TV/Player Portion Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TV_Mount_s__c</fullName>
        <label>TV Mount(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Wall mount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor stand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture mount (need to purchase)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture mount (office has)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceiling mount</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>TV_Mounted_on_Drywall_or_Concrete__c</fullName>
        <label>TV Mounted on Drywall or Concrete?</label>
        <picklist>
            <picklistValues>
                <fullName>Drywall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neither (going on a stand)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TV_Player_Active_Basic_Tests_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TV/Player Active/Basic Tests Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TV_Player_Labeled_Properly_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TV/Player Labeled Properly Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TVs_Being_Installed__c</fullName>
        <label># TVs Being Installed</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TabletConnectionType__c</fullName>
        <label>Tablet Connection Type (IT)</label>
        <picklist>
            <picklistValues>
                <fullName>Clinic&apos;s Network</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Verizon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tablet_Active_and_Online_in_MDM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tablet Active and Online in MDM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tablet_Additional_Equipment__c</fullName>
        <label>Exam Room Tablet Equip Needed To Close</label>
        <picklist>
            <picklistValues>
                <fullName>BOX101 - 42&quot; TV Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOX102 - 32&quot; TV Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOX103 - Player Return Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOX104 - Tablet Return Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOX105 - 46&quot;-55&quot; TV Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB101 - Null Modem RS232 Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB102 - 3.5 Audio Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB103 - 10 ft USB 3.0 Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB104 - USB 90 Degree Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB105 - VGA Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB106 - 10&apos; 3 Gray Prong Extension Cord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB107 - Cat 5 - 25ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB108 - Cat 5 - 5ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB109 - Cat 5 Faceplate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB110 - RCA Audio Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIT101 - LAN Player Bag Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIT102 - Non LAN Player Bag Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIT103 - TV Repair Bag Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIT104 - PC Repair Bag Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIT105 - Dual Screen Syncer Bag Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIT106 - Deinstallation Bag Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAB101 - Receiving Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIS101 - Outlet Cover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIS102 - Black Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIS103 - Philips Remote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIS104 - TP-Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIS105 - Panduit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIS106 - Dual Screen Syncer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIS107 - Cat 5 Jack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIS108 - Network Switch</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tablet_Connection_Type__c</fullName>
        <label>Tablet Connection Type</label>
        <picklist>
            <picklistValues>
                <fullName>WiFi - Clinic provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi - Almond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi - TP Link + Verizon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi - TP Link + Verizon + Almond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other  - Include information in notes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tablet_Connection__c</fullName>
        <description>Are tablets connected to the internet?  Why or why not.</description>
        <label>Tablet Connection</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tablet_Hardware_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tablet Hardware Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tablet_Labeling_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tablet(Ex Rm,Mount,Date,Status)Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tablet_Labeling__c</fullName>
        <description>Are tablets labeled properly in all areas they need to be?  Does everything line up properly?</description>
        <label>Tablet Portion Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tablet_MIA_Status__c</fullName>
        <label>Solution to the Problem (Tablet)</label>
        <picklist>
            <picklistValues>
                <fullName>Reboot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plugged back in and turned on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turned on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet setting change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WO - Swap Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WE - TS resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deinstalled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Troubleshooting Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tablets_Being_Installed__c</fullName>
        <label># Tablets Being Installed</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tablets_Impacted__c</fullName>
        <label>Tablets Impacted</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechName__c</fullName>
        <label>Tech Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Update__c</fullName>
        <label>Tech Update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tech_can_access_buttons_on_tablet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech can access buttons on tablet?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Since_Update__c</fullName>
        <formula>NOW()- LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Update</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Zon__c</fullName>
        <formula>Account.Time_Zone__c</formula>
        <label>Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_since_creation__c</fullName>
        <formula>NOW()- CreatedDate</formula>
        <label>Time Since Creation</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Floor__c</fullName>
        <formula>Account.Type_of_Floor__c</formula>
        <label>Type of Floor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerbalVerificationFromSiteContact__c</fullName>
        <label>Verbal Verification From Site Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Verizon_Suggest_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field designates the person who suggested Verizon be deployed.  This could have been done at the discretion of the MSE, OBD, NDS, NH, anyone really.</description>
        <inlineHelpText>Select the person who suggested we send a Verizon device.</inlineHelpText>
        <label>Verizon Suggest By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Video_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Video Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volume_Level_Setting_in_BS__c</fullName>
        <formula>Account.VolumeLevelSettinginBS__c</formula>
        <label>Volume Level Setting in BS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WBOutletLockReasonNotInstalled__c</fullName>
        <label>WB Outlet Lock - Reason Not Installed</label>
        <picklist>
            <picklistValues>
                <fullName>Clinic refused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incompatible outlet such as GFCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not included in shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech compliance</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WIFISpecialCharacters__c</fullName>
        <label>WIFI Special Characters</label>
        <picklist>
            <picklistValues>
                <fullName>Yes, send Almond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Waiting_Room_Additional_Equipment__c</fullName>
        <label>Waiting Room Equip Needed to Close</label>
        <picklist>
            <picklistValues>
                <fullName>BOX101 - 42&quot; TV Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOX102 - 32&quot; TV Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOX103 - Player Return Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOX104 - Tablet Return Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOX105 - 46&quot;-55&quot; TV Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB101 - Null Modem RS232 Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB102 - 3.5 Audio Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB103 - 10 ft USB 3.0 Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB104 - USB 90 Degree Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB105 - VGA Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB106 - 10&apos; 3 Gray Prong Extension Cord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB107 - Cat 5 - 25ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB108 - Cat 5 - 5ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB109 - Cat 5 Faceplate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB110 - RCA Audio Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIT101 - LAN Player Bag Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIT102 - Non LAN Player Bag Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIT103 - TV Repair Bag Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIT104 - PC Repair Bag Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIT105 - Dual Screen Syncer Bag Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIT106 - Deinstallation Bag Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAB101 - Receiving Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIS101 - Outlet Cover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIS102 - Black Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIS103 - Philips Remote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIS104 - TP-Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIS105 - Panduit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIS106 - Dual Screen Syncer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIS107 - Cat 5 Jack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIS108 - Network Switch</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Wallboard_Active_and_Labeled_Properly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wallboard Active and Labeled in MDM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wallboard_Connection_Type__c</fullName>
        <label>Wallboard Connection Type</label>
        <picklist>
            <picklistValues>
                <fullName>LAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wallboard_Equipment_Needed_to_Close__c</fullName>
        <label>Wallboard Equipment Needed to Close</label>
        <picklist>
            <picklistValues>
                <fullName>Wallboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cat5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Wallboard_Hardware_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wallboard Hardware Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wallboard_Notes__c</fullName>
        <label>Wallboard Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wallboards_Being_Installed__c</fullName>
        <label># Wallboards Being Installed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WiFiOutletLockReasonNotInstalled__c</fullName>
        <label>WiFi Outlet Lock - Reason Not Installed</label>
        <picklist>
            <picklistValues>
                <fullName>Clinic refused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incompatible outlet such as GFCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not included in shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech compliance</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WiFi_Being_Installed__c</fullName>
        <label># WiFi Being Installed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WiFi_Lan_Drop_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WiFi Lan Drop Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WiFi_Notes__c</fullName>
        <label>WiFi Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WiFi_Online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WiFi Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order_Id__c</fullName>
        <formula>Id</formula>
        <label>Work Order Id</label>
        <type>Text</type>
    </fields>
</CustomObject>